--- a/adminLoginStyle.css
+++ b/adminLoginStyle.css
@@ -12,12 +12,15 @@ body{
   height: 100vh;
   overflow: hidden;
 }
+
+
 .center{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
+  width: 25vw;
+    height: 55vh;
   background: white;
   border-radius: 10px;
   box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
@@ -74,14 +77,6 @@ form .txt_field{
 .txt_field input:valid ~ span::before{
   width: 100%;
 }
-.pass{
-  margin: -5px 0 20px 5px;
-  color: #a6a6a6;
-  cursor: pointer;
-}
-.pass:hover{
-  text-decoration: underline;
-}
 input[type="submit"]{
   width: 100%;
   height: 50px;
@@ -98,16 +93,16 @@ input[type="submit"]:hover{
   border-color: #2691d9;
   transition: .5s;
 }
-.signup_link{
-  margin: 30px 0;
-  text-align: center;
-  font-size: 16px;
-  color: #666666;
-}
-.signup_link a{
-  color: #2691d9;
-  text-decoration: none;
-}
-.signup_link a:hover{
-  text-decoration: underline;
+
+@media only screen and (max-width: 767px)  {
+  .center{
+    width: 60vw;
+    height: 35vh;
+  }
+  form .txt_field{
+    margin: 20px -10px;
+  }
+  .center h1{
+    padding: 10px 0;
+  }
 }
