--- a/css/adminDashboard.css
+++ b/css/adminDashboard.css
@@ -1,102 +1,337 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background: #fff;
-    height: 100vh;
-    overflow: hidden;
+  margin: 0;
+  padding: 0;
+  background: #fff;
+  height: 100vh;
+  overflow: auto;
 }
 
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 260px;
-    background: #232323;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 260px;
+  background: #232323;
 }
 
 .sidebar .user-details {
-    height: 80px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    /* top right bottom left */
-    padding: 33px 10px;
-border-bottom: 2px solid gray;
+  height: 80px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  /* top right bottom left */
+  padding: 33px 10px;
+  border-bottom: 2px solid gray;
 }
 
 .sidebar .user-details i {
-    font-size: 60px;
-    color: #fff;
-    height: 50px;
-    min-width: 80px;
-    text-align: center;
-    line-height: 50px;
+  font-size: 60px;
+  color: #fff;
+  height: 50px;
+  min-width: 80px;
+  text-align: center;
+  line-height: 50px;
 }
 
 .sidebar .user-details .user-name {
-    font-size: 22px;
-    color: #fff;
-    line-height: 22px;
+  font-size: 22px;
+  color: #fff;
+  line-height: 22px;
 }
 
 .sidebar .nav-links {
-    height: 100%;
-    padding-top: 20px;
+  height: 100%;
+  padding-top: 20px;
 }
 
 .sidebar .nav-links li {
-    position: relative;
-    list-style: none;
+  position: relative;
+  list-style: none;
 }
 
 .sidebar .nav-links li a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: 400;
-    color: #fff;
-    padding: 10px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 25px;
+  font-weight: 400;
+  color: #fff;
+  padding: 10px 0px;
 }
-
+.active {
+  background: #363434;
+}
 .sidebar .nav-links li a:hover {
-    background: #363434;
+  background: #363434;
 }
 
 .sidebar .logout {
-    position: fixed;
-    bottom: 0;
-    height: 50px;
-    width: inherit;
-    max-width: inherit;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    color: #fff;
-    font-size: 22px;
-    border-top: 2px solid gray;
+  position: fixed;
+  bottom: 0;
+  height: 50px;
+  width: inherit;
+  max-width: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: #fff;
+  font-size: 22px;
+  border-top: 2px solid gray;
 }
 
 .sidebar .logout i {
-    font-size: 35px;
-    color: #fff;
-    text-align: center;
-    line-height: 50px;
+  font-size: 35px;
+  color: #fff;
+  text-align: center;
+  line-height: 50px;
 }
-.sidebar .logout span{
-    margin: 0px 40px;
+.sidebar .logout span {
+  margin: 0px 40px;
 }
-.sidebar .logout:hover{
-    background:#363434;
+.sidebar .logout:hover {
+  background: #363434;
+}
+
+.main {
+  position: relative;
+  background: rebeccapurple;
+  left: 260px;
+  width: calc(100% - 260px);
+  height: 100vh;
+}
+.hide {
+  display: none;
+}
+.show {
+  display: block;
+}
+.main > div {
+  background: #fff;
+  height: 100%;
+  width: 100%;
+}
+.button {
+  display: flex;
+  height: 30px;
+  padding: 0;
+  background: #009578;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  overflow: hidden;
+  font-family: "Quicksand", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.button:hover {
+  background: #008168;
+}
+
+.button:active {
+  background: #006e58;
+}
+
+.button span,
+.button i {
+  display: inline-flex;
+  align-items: center;
+  padding: 0 8px;
+  color: #fff;
+  height: 100%;
+}
+
+.button i {
+  font-size: 1.3em;
+  background: rgba(0, 0, 0, 0.08);
+}
+.editBtn {
+  padding: 1px 6px;
+  background: #fff;
+  color: #239dc5;
+  border: 2px solid #239dc5;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 500;
+}
+.editBtn:hover {
+  background: #239dc5;
+  color: #fff;
+}
+.deleteBtn {
+  padding: 1px 6px;
+
+  background: #fff;
+  color: #ef476f;
+  border: 2px solid #ef476f;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 550;
+}
+.deleteBtn:hover {
+  background: #ef476f;
+  color: #fff;
+}
+.addBtn {
+  padding: 2px 10px;
+  background: #fff;
+  color: #e9972c;
+  border: 2px solid #e9972c;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 550;
+}
+.addBtn:hover {
+  background: #e9972c;
+  color: #fff;
+}
+.home .container .header {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 60px;
+  /* background: pink; */
+  padding: 20px;
+}
+.home .container .header div {
+  font-size: 30px;
+  font-weight: 800;
+}
+.home .container .data {
+  padding: 10px;
+  width: 100%;
+  height: calc(100% - 60px);
+}
+.home .container .data .filter {
+  width: 100%;
+  height: 50px;
+  /* background:rgba(0, 0, 0, 1); */
+}
+.home .container .data .filter form #filter-value {
+  height: 100%;
+  width: 100%;
+  border-radius: 3px 3px 0px 0px;
+  border: 1px solid rgb(180, 180, 180);
+  padding: 6px;
+  font-size: 15px;
+  outline: none;
+}
+.home .container .data .filter form #filter-value:focus {
+  border-bottom: 2px solid #006e58;
+}
+.home .container .data table {
+  width: 100%;
+  height: calc(100% - 160px);
+  text-align: left;
+  border-collapse: collapse;
+}
+.home .container .data table tr {
+  border: 1px solid rgb(180, 180, 180);
+  border-top: none;
+  height: 45px;
+}
+.home .container .data table tr td,
+.home .container .data table tr th {
+  padding: 5px;
+}
+
+.home .container .data .pages {
+  width: 100%;
+  height: 50px;
+  /* background: rgba(13, 202, 114, 1); */
+  font-size: 15px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  column-gap: 15px;
+  border: 1px solid rgb(180, 180, 180);
+  border-top: none;
+}
+.select-menu{
+    width: 60px;
+    margin: 0;
+}
+.select-menu .select-btn{
+    position: relative;
+    display: flex;
+    height: auto;
+    background: #fff;
+    /* padding: 6px; */
+    font-size: 15px;
+    font-weight: 200;
+    border-radius: 2px;
+    align-items: center;
+    cursor: pointer;
+    justify-content: space-between;
+    box-shadow: 0 0 5px rgb(0 0 0 / 10%);
+}
+.select-btn i{
+    font-size: 1.3em;
+    transition: 0.3s;
+    padding: 5px;
+    border-radius: 0px 2px 0px 2px;
+}
+.select-btn .sBtn-text{
+    padding: 5px;
+}
+.active2{
+    background: none;
+}
+.select-menu.active2 .select-btn i{
+    transform: rotate(-180deg);
+}
+.select-menu .options{
+    width: inherit;
+    position: absolute;
+    padding: 5px;
+    margin-top: 6px;
+    border-radius: 2px;
+    background: #fff;
+    box-shadow: 0 0 3px rgba(0,0,0,0.1);
+    display: none;
+}
+.select-menu.active2 .options{
+    display: block;
+}
+.options .option{
+    display: flex;
+    height: 30px;
+    cursor: pointer;
+    padding: 0 12px;
+    border-radius: 2px;
+    align-items: center;
+    background: #fff;
+}
+.options .option:hover{
+    background: #e9e9e9;
+}
+.option i{
+    font-size: 25px;
+    margin-right: 12px;
+}
+.option .option-text{
+    font-size: 15px;
+    color: #333;
+}
+.options .selected{
+    background: #e9e9e9;
+}
+.pages .nav{
+    font-size: 2em;
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
