--- a/css/adminDashboard.css
+++ b/css/adminDashboard.css
@@ -12,7 +12,8 @@ body {
   padding: 0;
   background: #fff;
   height: 100vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .sidebar {
@@ -170,7 +171,7 @@ body {
   background: #239dc5;
   color: #fff;
 }
-.deleteBtn {
+.removeBtn {
   padding: 1px 6px;
 
   background: #fff;
@@ -180,7 +181,7 @@ body {
   font-size: 15px;
   font-weight: 550;
 }
-.deleteBtn:hover {
+.removeBtn:hover {
   background: #ef476f;
   color: #fff;
 }
@@ -197,7 +198,7 @@ body {
   background: #e9972c;
   color: #fff;
 }
-.home .container .header {
+.faculty .container .header {
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
@@ -206,21 +207,21 @@ body {
   /* background: pink; */
   padding: 20px;
 }
-.home .container .header div {
+.faculty .container .header div {
   font-size: 30px;
   font-weight: 800;
 }
-.home .container .data {
+.faculty .container .data {
   padding: 10px;
   width: 100%;
   height: calc(100% - 60px);
 }
-.home .container .data .filter {
+.faculty .container .data .filter {
   width: 100%;
   height: 50px;
   /* background:rgba(0, 0, 0, 1); */
 }
-.home .container .data .filter form #filter-value {
+.faculty .container .data .filter form #filter-value {
   height: 100%;
   width: 100%;
   border-radius: 3px 3px 0px 0px;
@@ -229,26 +230,26 @@ body {
   font-size: 15px;
   outline: none;
 }
-.home .container .data .filter form #filter-value:focus {
+.faculty .container .data .filter form #filter-value:focus {
   border-bottom: 2px solid #006e58;
 }
-.home .container .data table {
+.faculty .container .data table {
   width: 100%;
   height: calc(100% - 160px);
   text-align: left;
   border-collapse: collapse;
 }
-.home .container .data table tr {
+.faculty .container .data table tr {
   border: 1px solid rgb(180, 180, 180);
   border-top: none;
   height: 45px;
 }
-.home .container .data table tr td,
-.home .container .data table tr th {
+.faculty .container .data table tr td,
+.faculty .container .data table tr th {
   padding: 5px;
 }
 
-.home .container .data .pages {
+.faculty .container .data .pages {
   width: 100%;
   height: 50px;
   /* background: rgba(13, 202, 114, 1); */
@@ -260,78 +261,277 @@ body {
   border: 1px solid rgb(180, 180, 180);
   border-top: none;
 }
-.select-menu{
-    width: 60px;
-    margin: 0;
+.select-menu {
+  width: 60px;
+  margin: 0;
 }
-.select-menu .select-btn{
-    position: relative;
-    display: flex;
-    height: auto;
-    background: #fff;
-    /* padding: 6px; */
-    font-size: 15px;
-    font-weight: 200;
-    border-radius: 2px;
-    align-items: center;
-    cursor: pointer;
-    justify-content: space-between;
-    box-shadow: 0 0 5px rgb(0 0 0 / 10%);
+.select-menu .select-btn {
+  position: relative;
+  display: flex;
+  height: auto;
+  background: #fff;
+  /* padding: 6px; */
+  font-size: 15px;
+  font-weight: 200;
+  border-radius: 2px;
+  align-items: center;
+  cursor: pointer;
+  justify-content: space-between;
+  box-shadow: 0 0 5px rgb(0 0 0 / 10%);
 }
-.select-btn i{
-    font-size: 1.3em;
-    transition: 0.3s;
-    padding: 5px;
-    border-radius: 0px 2px 0px 2px;
+.select-btn i {
+  font-size: 1.3em;
+  transition: 0.3s;
+  padding: 5px;
+  border-radius: 0px 2px 0px 2px;
 }
-.select-btn .sBtn-text{
-    padding: 5px;
+.select-btn .sBtn-text {
+  padding: 5px;
 }
-.active2{
-    background: none;
+.active2 {
+  background: none;
 }
-.select-menu.active2 .select-btn i{
-    transform: rotate(-180deg);
+.select-menu.active2 .select-btn i {
+  transform: rotate(-180deg);
 }
-.select-menu .options{
-    width: inherit;
-    position: absolute;
-    padding: 5px;
-    margin-top: 6px;
-    border-radius: 2px;
-    background: #fff;
-    box-shadow: 0 0 3px rgba(0,0,0,0.1);
-    display: none;
+.select-menu .options {
+  width: inherit;
+  position: absolute;
+  padding: 5px;
+  margin-top: 6px;
+  border-radius: 2px;
+  background: #fff;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  display: none;
 }
-.select-menu.active2 .options{
-    display: block;
+.select-menu.active2 .options {
+  display: block;
 }
-.options .option{
-    display: flex;
-    height: 30px;
-    cursor: pointer;
-    padding: 0 12px;
-    border-radius: 2px;
-    align-items: center;
-    background: #fff;
+.options .option {
+  display: flex;
+  height: 30px;
+  cursor: pointer;
+  padding: 0 12px;
+  border-radius: 2px;
+  align-items: center;
+  background: #fff;
 }
-.options .option:hover{
-    background: #e9e9e9;
+.options .option:hover {
+  background: #e9e9e9;
 }
-.option i{
-    font-size: 25px;
-    margin-right: 12px;
+.option i {
+  font-size: 25px;
+  margin-right: 12px;
 }
-.option .option-text{
-    font-size: 15px;
-    color: #333;
+.option .option-text {
+  font-size: 15px;
+  color: #333;
 }
-.options .selected{
-    background: #e9e9e9;
+.options .selected {
+  background: #e9e9e9;
 }
-.pages .nav{
-    font-size: 2em;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-evenly;
+.pages .nav {
+  font-size: 2em;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.data table td:nth-child(2) {
+  cursor: pointer;
+}
+.container .card-background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background: #0000002f;
+  display: none;
+}
+.container .card-background .card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 70%;
+  background: #333837;
+  border-radius: 4px;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  padding: 4px;
+  display: grid;
+  grid-template-columns: fit-content(100%) fit-content(100%) auto;
+  gap: 8px;
+  align-items: baseline;
+  grid-auto-rows: minmax(fit-content(100%), 20px);
+  font-size: 18px;
+  padding: 5px;
+  padding-top: 15px;
+  border: 2px solid rgb(216, 216, 216);
+  color: #fff;
+}
+.container .card-background .card i {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px;
+  font-size: 30px;
+  color: #fff;
+}
+.container .card-background .card i:hover{
+  color:#f3a8a8;
+}
+.container .card span:nth-child(even) {
+  padding-left: 10px;
+}
+.container .card-background2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background: #0000002f;
+  display: none;
+}
+.container .card-background2 .card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 70%;
+  background: #333837;
+  border-radius: 4px;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  padding: 4px;
+  display: grid;
+  grid-template-columns: fit-content(100%) fit-content(100%) auto;
+  gap: 8px;
+  align-items: baseline;
+  grid-auto-rows: minmax(fit-content(100%), 20px);
+  font-size: 18px;
+  padding: 10px;
+  padding-top: 10px;
+  border: 2px solid rgb(216, 216, 216);
+  color: #fff;
+}
+.container .card-background2 .card i {
+  position: absolute;
+  right: 0;
+  top: -5px;
+  padding: 5px;
+  font-size: 25px;
+  color: #fff;
+}
+.container .card-background2 .card span:nth-child(even) {
+  padding-left: 10px;
+}
+.container .card-background2 form input{
+  outline: none;
+  padding: 2px;
+}
+.card-background2 .card div {
+  grid-column: 1/4;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.card-background2 .card div .saveBtn {
+  padding: 1px 6px;
+  background: #239dc5;
+  color: #fff;
+  border: 2px solid #239dc5;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.card-background2 .card div .saveBtn:hover {
+  background: #072f3b;
+  color: #fff;
+}
+.card-background2 .card div .closeBtn {
+  padding: 1px 6px;
+  background: #ef476f;
+  color: #fff;
+  border: 2px solid #ef476f;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.card-background2 .card div .closeBtn:hover {
+  background: #7e031f;
+  color: #fff;
+}
+.container .card-background3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background: #0000002f;
+  display: none;
+}
+.container .card-background3 .card {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 60%;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  padding: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  text-align: center;
+}
+.container .card-background3 .card > * {
+  margin: 5px 0px;
+}
+.container .card-background3 .card i{
+  position: relative;
+  font-size: 35px;
+  color: #d90429;
+  border-radius: 50%;  
+  background:rgba(255, 163, 163, 0.486);
+}
+.container .card-background3 .card .removeBtn{
+  padding: 1px 6px;
+  background: #ef233c;
+  color: #fff;
+  border: 2px solid #ef233c;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 500;
+  width: 80%;
+  height: 40px;
+}
+.container .card-background3 .card .removeBtn:hover{
+  background: #d81128;
+}
+.container .card-background3 .card .cancelBtn{
+  padding: 1px 6px;
+  background: #ffffff;
+  color: #000000;
+  border: 2px solid #ffffff;
+  border: 1px solid gray;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 500;
+  width: 80%;
+  height: 40px;
+}
+.container .card-background3 .card .cancelBtn:hover{
+  background-color: #f0f0f0;
 }
