--- a/css/facultyDashboard.css
+++ b/css/facultyDashboard.css
@@ -17,12 +17,15 @@ body {
 }
 
 .sidebar {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 260px;
-  background: #232323;
+  background: #fff;
+  padding: 0px 10px;
+  box-shadow: 0 20px 25px 5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 .sidebar .user-details {
@@ -37,7 +40,7 @@ body {
 
 .sidebar .user-details i {
   font-size: 60px;
-  color: #fff;
+  color: #000000;
   height: 50px;
   min-width: 80px;
   text-align: center;
@@ -46,7 +49,7 @@ body {
 
 .sidebar .user-details .user-name {
   font-size: 22px;
-  color: #fff;
+  color: #000000;
   line-height: 22px;
 }
 
@@ -58,6 +61,7 @@ body {
 .sidebar .nav-links li {
   position: relative;
   list-style: none;
+  margin: 5px 0px;
 }
 
 .sidebar .nav-links li a {
@@ -66,42 +70,58 @@ body {
   justify-content: center;
   text-decoration: none;
   font-size: 25px;
-  font-weight: 400;
-  color: #fff;
+  font-weight: 500;
+  color: #000000;
   padding: 10px 0px;
 }
 .active {
-  background: #363434;
+  background: #4b49ac;
+  color: #ffffff;
+  border-radius: 7px;
+}
+.sidebar .nav-links .active a{
+  color: #fff;
 }
 .sidebar .nav-links li a:hover {
-  background: #363434;
+  background: #6260df81;
+  border-radius: 7px;
 }
 
 .sidebar .logout {
   position: fixed;
-  bottom: 0;
+  bottom: 6px;
+    left: 1px;
   height: 50px;
   width: inherit;
   max-width: inherit;
+  color: #000000;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  color: #fff;
+  padding: 0px 10px;
+}
+.sidebar .logout div{
+  width: 100%;
   font-size: 22px;
   border-top: 2px solid gray;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
-
 .sidebar .logout i {
   font-size: 35px;
-  color: #fff;
+  color: #000000;
   text-align: center;
   line-height: 50px;
 }
 .sidebar .logout span {
-  margin: 0px 40px;
+  margin: 0px auto;
 }
-.sidebar .logout:hover {
-  background: #363434;
+.sidebar .logout div:hover {
+  background: #6260df81;
+  border-radius: 7px;
+  border-color: #fff;
 }
 
 .main {
@@ -198,30 +218,34 @@ body {
   background: #e9972c;
   color: #fff;
 }
-.faculty .container .header {
+.students .container .header {
   display: inline-flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   height: 60px;
   /* background: pink; */
   padding: 20px;
 }
-.faculty .container .header div {
+.students .container .header div {
   font-size: 30px;
   font-weight: 800;
+  /* margin-left: 50px; */
 }
-.faculty .container .data {
+.students .container .header .addBtn{
+  display: none;
+}
+.students .container .data {
   padding: 10px;
   width: 100%;
   height: calc(100% - 60px);
 }
-.faculty .container .data .filter {
+.students .container .data .filter {
   width: 100%;
   height: 50px;
   /* background:rgba(0, 0, 0, 1); */
 }
-.faculty .container .data .filter form #filter-value {
+.students .container .data .filter form #filter-value {
   height: 100%;
   width: 100%;
   border-radius: 3px 3px 0px 0px;
@@ -230,26 +254,32 @@ body {
   font-size: 15px;
   outline: none;
 }
-.faculty .container .data .filter form #filter-value:focus {
+.students .container .data .filter form #filter-value:focus {
   border-bottom: 2px solid #006e58;
 }
-.faculty .container .data table {
+.students .container .data table {
   width: 100%;
   height: calc(100% - 160px);
   text-align: left;
   border-collapse: collapse;
 }
-.faculty .container .data table tr {
+.students .container .data table tr {
   border: 1px solid rgb(180, 180, 180);
   border-top: none;
   height: 45px;
 }
-.faculty .container .data table tr td,
-.faculty .container .data table tr th {
+.students .container .data table tr td,
+.students .container .data table tr th {
   padding: 5px;
 }
+.students .container .data table tr td:last-child{
+  display: none;
+}
+.students .container .data table thead th:last-child{
+  display: none;
+}
 
-.faculty .container .data .pages {
+.students .container .data .pages {
   width: 100%;
   height: 50px;
   /* background: rgba(13, 202, 114, 1); */
@@ -360,23 +390,31 @@ body {
   border-radius: 4px;
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   padding: 4px;
+  font-size: 18px;
+  padding: 5px;
+  border: 2px solid rgb(216, 216, 216);
+  color: #fff;
+  overflow-y: scroll;
+}
+.container .card-background .card .content{
   display: grid;
   grid-template-columns: fit-content(100%) fit-content(100%) auto;
   gap: 8px;
   align-items: baseline;
-  grid-auto-rows: minmax(fit-content(100%), 20px);
+  grid-auto-rows: minmax(35px, 20px);
+  position: absolute;
+  top: 0;
   font-size: 18px;
   padding: 5px;
   padding-top: 15px;
-  border: 2px solid rgb(216, 216, 216);
   color: #fff;
 }
 .container .card-background .card i {
-  position: absolute;
-  right: 0;
+  position: sticky;
   top: 0;
-  padding: 12px;
-  font-size: 30px;
+  left: 100%;
+  padding: 8px;
+  font-size: 33px;
   color: #fff;
 }
 .container .card-background .card i:hover{
