--- a/css/facultyDashboard.css
+++ b/css/facultyDashboard.css
@@ -65,7 +65,8 @@ body {
   margin: 5px 0px;
 }
 
-.sidebar .nav-links li a {
+.sidebar > .nav-links > li > a {
+  transition:color 0.3s, background 0.3s;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -86,6 +87,7 @@ body {
 .sidebar .nav-links li a:hover {
   background: #6260df81;
   border-radius: 7px;
+  transition:color 0.3s, background 0.3s;
 }
 
 .sidebar .logout {
@@ -205,7 +207,7 @@ body {
   background: #ef476f;
   color: #fff;
 }
-.addBtn {
+.addBtn, .timetable .manageBtn {
   padding: 2px 10px;
   background: #fff;
   color: #e9972c;
@@ -214,7 +216,7 @@ body {
   font-size: 16px;
   font-weight: 550;
 }
-.addBtn:hover {
+.addBtn:hover, .timetable .manageBtn:hover {
   background: #e9972c;
   color: #fff;
 }
@@ -226,6 +228,7 @@ body {
   height: 60px;
   /* background: pink; */
   padding: 20px;
+
 }
 .students .container .header div {
   font-size: 30px;
@@ -235,17 +238,19 @@ body {
 .students .container .header .addBtn{
   display: none;
 }
-.students .container .data {
+.students .container .data, .attendance > .data, .attendance .studentData > .data {
   padding: 10px;
   width: 100%;
-  height: calc(100% - 60px);
+  height: fit-content;
 }
-.students .container .data .filter {
+.students .container .data .filter,
+ .attendance > .data .filter {
   width: 100%;
   height: 50px;
   /* background:rgba(0, 0, 0, 1); */
 }
-.students .container .data .filter form #filter-value {
+.students .container .data .filter #filter-value,
+.attendance > .data #filter-value {
   height: 100%;
   width: 100%;
   border-radius: 3px 3px 0px 0px;
@@ -254,32 +259,47 @@ body {
   font-size: 15px;
   outline: none;
 }
-.students .container .data .filter form #filter-value:focus {
+.students .container .data .filter #filter-value:focus,
+.attendance .data .filter #filter-value:focus {
   border-bottom: 2px solid #006e58;
 }
-.students .container .data table {
+.students > .container .data table,
+.attendance > .data table,
+.attendance > .studentData > .data table{
   width: 100%;
   height: calc(100% - 160px);
   text-align: left;
   border-collapse: collapse;
+  
 }
-.students .container .data table tr {
+.attendance .data table{
+  text-align: center;
+}
+.students > .container .data table tr,
+.attendance > .data table tr,
+.attendance > .studentData > .data table tr{
   border: 1px solid rgb(180, 180, 180);
   border-top: none;
   height: 45px;
 }
-.students .container .data table tr td,
-.students .container .data table tr th {
+.students > .container .data table tr td,
+.students > .container .data table tr th,
+.attendance > .data table tr td,
+.attendance > .data tr th,
+.attendance > .studentData > .data table tr th,
+.attendance > .studentData > .data table tr td{
   padding: 5px;
+  height: 45px;
 }
-.students .container .data table tr td:last-child{
+.students >.container .data table tr td:last-child{
   display: none;
 }
-.students .container .data table thead th:last-child{
+.students >  .container .data table thead th:last-child{
   display: none;
 }
 
-.students .container .data .pages {
+.students .container .data .pages,
+.attendance .data .pages{
   width: 100%;
   height: 50px;
   /* background: rgba(13, 202, 114, 1); */
@@ -294,6 +314,7 @@ body {
 .select-menu {
   /* width: fit-content; */
   margin: 0;
+  display: inline-block;
 }
 .select-menu span{
   margin: 0px auto;
@@ -319,7 +340,8 @@ body {
   border-radius: 0px 2px 0px 2px;
 }
 .select-btn .sBtn-text {
-  padding: 5px;
+  margin: 5px;
+  /* width: 113px; */
 }
 .active2 {
   background: none;
@@ -328,9 +350,10 @@ body {
   transform: rotate(-180deg);
 }
 .select-menu .options {
+  
   width: fit-content;
   position: absolute;
-  padding: 5px;
+  padding: 10px;
   margin-top: 6px;
   border-radius: 2px;
   background: #fff;
@@ -338,7 +361,7 @@ body {
   display: none;
 }
 .select-menu.active2 .options {
-  display: block;
+  display: inline-block;
 }
 .options .option {
   display: flex;
@@ -372,7 +395,7 @@ body {
 .data table td:nth-child(2) {
   cursor: pointer;
 }
-.container .card-background {
+.card-background, .timetable .content .card-background{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -382,7 +405,7 @@ body {
   background: #0000002f;
   display: none;
 }
-.container .card-background .card {
+.card-background .card , .timetable .content .card-background .card{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -397,9 +420,10 @@ body {
   padding: 5px;
   border: 2px solid rgb(216, 216, 216);
   color: #fff;
+  overflow: hidden;
   overflow-y: auto;
 }
-.container .card-background .card .content{
+.card-background .card .content, .timetable .content .card-background .card .content{
   display: grid;
   grid-template-columns: fit-content(100%) fit-content(100%) auto;
   gap: 8px;
@@ -411,19 +435,22 @@ body {
   padding: 5px;
   padding-top: 15px;
   color: #fff;
+  width: 100%;
+  height: fit-content;
 }
-.container .card-background .card i {
+.card-background .card i, .timetable .content .card-background .card i {
   position: sticky;
   top: 0;
   left: 100%;
   padding: 8px;
   font-size: 33px;
   color: #fff;
+  z-index: 2;
 }
-.container .card-background .card i:hover{
+.card-background .card i:hover, .timetable .content .card-background .card i:hover{
   color:#f3a8a8;
 }
-.container .card span:nth-child(even) {
+.card-background  .card span:nth-child(even) {
   padding-left: 10px;
 }
 .container .card-background2 {
@@ -482,7 +509,8 @@ body {
   justify-content: space-evenly;
 }
 .card-background2 .card div .saveBtn,
- .timetable .content table .empty button{
+ .timetable .content table .unscheduled button,
+ .timetable .content .takeAttendanceBtn{
   padding: 1px 6px;
   background: #239dc5;
   color: #fff;
@@ -493,7 +521,7 @@ body {
 }
 
 .card-background2 .card div .saveBtn:hover,
-.timetable .content table .empty button:hover{
+.timetable .content table .unscheduled button:hover{
   background: #072f3b;
   color: #fff;
 }
@@ -506,7 +534,10 @@ body {
   font-size: 15px;
   font-weight: 500;
 }
-
+.timetable .content .takeAttendanceBtn:hover{
+  background: #0f91c5;
+  border: 2px solid #0f91c5;
+}
 .card-background2 .card div .closeBtn:hover {
   background: #7e031f;
   color: #fff;
@@ -580,29 +611,32 @@ body {
   background-color: #f0f0f0;
 }
 
-.timetable .header{
+.timetable::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+
+.timetable {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.timetable > .header, .attendance >.header{
   width: 100%;
   height: 70px;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: space-between;
   background: rgb(226, 195, 255);;
   padding: 20px;
 }
 
-.timetable .header > span{
+.timetable .header > span, .attendance > .header > span{
   font-size: 18px;
   margin: 10px;
 }
-.timetable .header .select-menu{
-  margin: 10px;
-}
-.timetable .header button{
-  position: absolute;
-  right: 0;
-  margin-right: 20px;
-}
-.timetable .content{
+.timetable > .content{
   width: 100%;
   background: rgb(226, 195, 255);
   padding: 20px;
@@ -692,6 +726,117 @@ body {
 .timetable .content table tbody tr:nth-child(1) td div{
   margin-top: 4px;
 }
-.timetable .content table tbody tr td .empty{
+.timetable .content table tbody tr td .unscheduled{
   display: none;
 }
+
+.timetable .content .card-background{
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translate(0, 0)
+}
+.timetable .content .card-background .card{
+  top: 50%;
+  left: 50%;
+  transform: translate(-18%, -50%);
+}
+.timetable .card-background .card .content div{
+  grid-column: 1/4;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    row-gap: 15px;
+}
+.timetable .content .card-background .card{
+  height: fit-content;
+  padding-bottom: 20px;
+}
+.timetable .content .card-background .card .content{
+  gap: 8px;
+  position: relative;
+}
+.timetable .content .card-background .card i {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: unset;
+  padding: 8px;
+  font-size: 33px;
+  color: #fff;
+}
+.attendance .data table tbody tr td{
+  display: table-cell;
+}
+.attendance > .data > table tbody tr td i{
+  font-size: 1.5rem;
+}
+.attendance > .studentData{
+  position: absolute;
+  top: 0;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+}
+.attendance .studentData > .header{
+  width: 100%;
+}
+.attendance .studentData > .header .info{
+  display: grid;
+  grid-template-columns: fit-content(100%) fit-content(100%) auto;
+  gap: 8px;
+  align-items: baseline;
+  grid-auto-rows: minmax(fit-content(100%), 20px);
+  padding: 20px;
+  font-size: 1.1rem;
+  z-index: 1;
+  /* width: calc(100% - (1.8rem + 16px)); */
+}
+.attendance > .studentData table thead {
+  border: 1px solid rgb(180, 180, 180);
+}
+.toggle-sidebar{
+  font-size: 1.4rem;
+  background-color: #4b49ac;
+  color: #fff;
+  border-radius: 0px 7px 7px 0px;
+  position: fixed;
+  top: 22px;
+  left: 260px;
+  z-index: 2;
+  height: 1.4rem;
+  padding: 0px;
+  width: fit-content;
+}
+.toggle-sidebar > i{
+  transition: 0.3s;
+  transform: rotate(-180deg);
+}
+
+.attendance .studentData .close-card {
+  font-size: 1.8rem;
+  background: transparent;
+  position: sticky;
+  top: 0;
+  left:  calc(100% - (1.8rem + 16px));
+  padding: 8px;
+  float: right;
+  z-index: 5;
+}
+/* @media screen and (max-width:768px) {
+  .sidebar{
+    visibility: hidden ; 
+  }
+  .main{
+    width: 100% ;
+    left: 0;
+  }
+  .toggle-sidebar{
+    left: 0px;
+  }
+  .toggle-sidebar > i{
+    transform: rotate(0deg);
+  }
+} */
