--- a/css/adminLogin.css
+++ b/css/adminLogin.css
@@ -24,17 +24,21 @@ body{
   background: white;
   border-radius: 10px;
   box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+  width: fit-content;
+    height: fit-content;
+    padding: 10px 10px;
+    padding-bottom: 30px;
 }
 .center h1{
   text-align: center;
   padding: 20px 0;
   border-bottom: 1px solid silver;
 }
-.center form{
+.center #card{
   padding: 0 40px;
   box-sizing: border-box;
 }
-form .txt_field{
+#card .txt_field{
   position: relative;
   border-bottom: 2px solid #adadad;
   margin: 30px 0;
@@ -96,11 +100,13 @@ input[type="submit"]:hover{
 
 @media only screen and (max-width: 767px)  {
   .center{
-    width: 60vw;
-    height: 35vh;
+    width: fit-content;
+    height: fit-content;
+    padding: 10px 10px;
+    padding-bottom: 30px;
   }
-  form .txt_field{
-    margin: 20px -10px;
+  #card .txt_field{
+    margin: 30px -10px;
   }
   .center h1{
     padding: 10px 0;
