--- a/css/studentFacultyLogin.css
+++ b/css/studentFacultyLogin.css
@@ -64,13 +64,13 @@ body {
     transform: translateX(100%);
     transition: all 0.2s ease-in-out;
 }
-.center form {
+#studentForm, #facultyForm {
     padding: 0 40px;
     box-sizing: border-box;
 }
 
 
-form .txt_field {
+#studentForm .txt_field, #facultyForm .txt_field {
     position: relative;
     border-bottom: 2px solid #adadad;
     margin: 30px 0;
